--- a/test/fixtures/sample.html
+++ b/test/fixtures/sample.html
@@ -24,7 +24,7 @@
 <span class="k">end</span>
 </code></pre></div></div>
 
-<p><img src="https://example.jp/img.jpg" alt="img" /></p>
+<p><img src="img/dummy.png" alt="img" /></p>
 
 <p>↓Markdownとして解釈するとただの<code class="highlighter-rouge">&lt;hr /&gt;</code>になります。Cheepub::Contentで解釈するとページを分割します。</p>
 
