--- a/test/fixtures/sample.html
+++ b/test/fixtures/sample.html
@@ -26,7 +26,7 @@
 
 <p><img src="images/zZJ0nKRwkfnIXJ4z3fj-U0EuSX1k2CIo8kHexqp3kXw.png" alt="img" /></p>
 
-<p>↓Markdownとして解釈するとただの<code class="highlighter-rouge">&lt;hr /&gt;</code>になります。Cheepub::Contentで解釈するとページを分割します。</p>
+<p>↓Markdownとして解釈するとただの<code>&lt;hr /&gt;</code>になります。Cheepub::Contentで解釈するとページを分割します。</p>
 
 <hr />
 
